# copula

./: .gitignore  README.md  pyproject.toml
notebooks/: anomaly-detection.ipynb  stock-analysis.ipynb  try_copula.ipynb
