[tool.poetry]
name = "copula"
version = "0.1.0"
description = ""
authors = ["Ezra Tampubolon <ezra.tampubolon@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
copulas = "^0.9.2"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"


[tool.poetry.group.data.dependencies]
kaggle = "^1.5.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
